--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@ body {
 }
 
 .circle {
-  height: 25px;
-  width: 25px;
+  height: 30px;
+  width: 30px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
+  text-align: center; /* text-align to centralise text horizontally */
+  line-height: 30px; /* line height to centralise text vertically */
 }
 
 #question {
