minor css edits

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ h1 {
   color: #ffbaaa;
   background-color: #cc4b09;
   outline: black;
-  padding: 20px;
-  border-style: dotted;
+  padding: 10px;
+  border-style: dashed;
   border-radius: 20px;
 }
 
@@ -12,6 +12,7 @@ header {
   border-color: black;
   border-style: solid;
   border-radius: 20px;
+  margin: 5px;
 }
 
 body {
@@ -37,7 +38,7 @@ body {
 }
 
 #contentMiddleUpper {
-  margin: 10px;
+  margin: 5px;
   border-color: black;
   border-style: solid;
   border-radius: 20px;
@@ -48,7 +49,8 @@ body {
 }
 
 #contentMiddleLower {
-  padding: 10px;
+  margin: 5px;
+  padding-bottom: 5px;
   border-color: black;
   border-style: solid;
   border-radius: 20px;
